--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "nahh-weather-bot",
   "version": "1.0.0",
   "description": "Weather app",
-  "author": "Aditya Chakravorty",
+  "author": "Sahil Singh",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
