--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "adminpanel",
   "private": true,
   "version": "1.0.0",
-  "author": "Aditya Chakravorty",
+  "author": "Sahil Singh",
   "type": "module",
   "proxy": "http://localhost:3000",
   "scripts": {
@@ -13,7 +13,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
-    "firebase": "^10.6.0",
+    "firebase": "^10.7.1",
     "firebaseui": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
