--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 TELEGRAM_BOT_TOKEN=6875298981:AAG7TdQ_LLfe2kk06AEBowAHM_4OLJaN-hI
 WEATHER_API_KEY=a13dd20ac3f14a936a675f2103e2e89c
-PORT=3000
+PORT= process.env.PORT || 3000
 URI=mongodb+srv://sahilsinghiscool:sahilsinghcool@cluster0.sbafqbg.mongodb.net/weatherbot
 DB=weatherbot
