--- a/client/.env
+++ b/client/.env
@@ -4,4 +4,4 @@ VITE_APP_PROJECT_ID=weatherbot-c3be0
 VITE_APP_STORAGE_BUCKET=weatherbot-c3be0.appspot.com
 VITE_APP_MESSAGING_SENDER=690940312067
 VITE_APP_ID=1:690940312067:web:6eae30bde418c1791c2c36
-VITE_APP_ENDPOINT=http://localhost:3000
+VITE_APP_ENDPOINT=https://telegramweatherbot.onrender.com
